Fix footer wrapping

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -9,6 +9,7 @@
     padding: 20px 0 30px 0; 
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: flex-start;
 
     .brand {
@@ -17,12 +18,10 @@
     }
 
     .copyright{
-        width: 50%;
         text-align: left;
     }
 
     .social-links {
-        width: 50%;
         text-align: right;
 
         .facebook, .instagram, .linkedin {
